@@ -1,3 +1,8 @@
+2006-05-01  Johannes Schmid <jhs@cvs.gnome.org>
+
+	* plugins/symbol-broser/an_symbol_view.c:
+	Fixed crasher in namespace exploration
+
 2006-05-01  Massimo Cora' <maxcvs@email.it>
 
 	* configure.in:
